# MAXSAT-EA-Solver

./: .gitignore  README.md  lxs432.py  main.py  pyproject.toml
examples/: toy.wcnf
tests/: test_core.py
wcnfkit/: __init__.py  evolution.py  satisfaction.py  wdimacs.py
